--- a/find-your-market/src/styles/Login.css
+++ b/find-your-market/src/styles/Login.css
@@ -57,6 +57,18 @@
     border-radius: 4px;
     cursor: pointer;
   }
+  .password-links{
+    font-size: 14px;
+    color: #666;
+    text-align: right;
+    padding-top: 5px;
+  }
+  .login-links{
+    font-size: 14px;
+    color: #666;
+    padding-top: 20px;
+  }
+ 
   
   .login-btn:hover {
     background-color: #7ab456;
@@ -68,9 +80,17 @@
     margin-bottom: 10px;
     font-weight: bold;
   }
+
+    .stalls {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%; 
+    object-fit: contain; 
+  }
   
 
-  @media (max-width: 768px) {
+  @media (max-width: 768px) { 
     .login-box {
       width: 90%;
       padding: 20px;
