--- a/find-your-market/src/styles/App.css
+++ b/find-your-market/src/styles/App.css
@@ -13,7 +13,7 @@ header {
 
 footer {
   margin-top: auto;
-  background-color: #333;
+  background-color: transparent;
   color: white;
   text-align: center;
   padding: 20px;
