--- a/find-your-market/src/styles/CreateAccount.css
+++ b/find-your-market/src/styles/CreateAccount.css
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
   min-height: 100vh;
   background-color: var(--darkgreen);
   box-sizing: border-box;
@@ -19,6 +18,7 @@
   border-radius: 8px;
   text-align: center;
   margin-bottom: 20px;
+  margin-top: 30px;
 }
 
 h2 {
@@ -96,11 +96,12 @@ h2 {
 } 
 
 .create-account-stalls {
-  width: 100%;
-  margin-top: 20px;
-  object-fit: contain;
   position: relative;
   bottom: auto;
+    bottom: 0;
+    left: 0;
+    width: 100%; 
+    object-fit: contain; 
 }
 
 .radio-group {
