--- a/find-your-market/src/styles/App.css
+++ b/find-your-market/src/styles/App.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Cabin&family=Dongle&display=swap');
+* {
+  font-family: "Dongle", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .App {
   display: flex;
   flex-direction: column;
