high contrast/dyselxia

--- a/find-your-market/src/styles/index.css
+++ b/find-your-market/src/styles/index.css
@@ -5,9 +5,9 @@ body {
   background-color: transparent;
 }
 
-h1, h2, h3 {
+/* h1, h2, h3 {
   color: #333;
-}
+} */
 
 a {
   text-decoration: none;
