--- a/find-your-market/src/styles/Markets.css
+++ b/find-your-market/src/styles/Markets.css
@@ -1,11 +1,109 @@
-.market-container {
-    font-family: Arial, sans-serif;
-    padding: 20px;
-    max-width: 600px;
-    margin: 0 auto;
-  }
-  .market-title {
-    margin-top:50px;
-    color: #333;
-  }
-  
+@import 'variables.css';
+
+.markets-container {
+  padding: 20px;
+  max-width: 800px;
+  margin: 0 auto;
+  background-color: hsl(0, 0%, 98%);
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+.markets-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;  
+}
+
+.markets-title {
+  font-size: 46px;
+  color: #333;
+  text-align: center;
+  flex-grow: 1;
+  margin-top: 70px;
+  font-weight: bold;
+}
+
+.search-button {
+  background: none;
+  border: none;
+  font-size: 24px;
+  transition: color 0.3s ease;
+  margin-top: 70px;
+} 
+.markets-item {
+  margin-bottom: 15px;
+}
+
+.markets-link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  color: inherit;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+.markets-logo {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 50%;
+}
+
+.name-container {
+  display: flex;
+  align-items: center; 
+  margin-left: 15px; 
+}
+
+.markets-name {
+  font-size: 18px;
+  color: #fff;  
+  margin: 0;
+  line-height: 1;
+  padding: 10px 20px;  
+  border: 2px solid transparent; 
+  border-radius: 3px;  
+  background-color: #007bff;  
+  transition: all 0.3s ease;  
+}
+
+
+.markets-link:hover .markets-name {
+  background-color: #0056b3;  
+  border: 2px solid #0056b3;  
+  color: #fff;  
+}
+
+
+.markets-link:active .markets-name {
+  background-color: #004085;  
+  border: 2px solid #004085;  
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);  
+}
+
+
+.markets-link:focus .markets-name {
+  outline: none;  
+  box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5);  
+}
+
+.markets-map {
+  margin-top: 30px;
+  height: 300px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.markets-map iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 10px;
+}
