--- a/find-your-market/src/styles/Markets.css
+++ b/find-your-market/src/styles/Markets.css
@@ -62,8 +62,8 @@
   align-items: center;
   justify-content: space-between;
   padding: 15px;
-  background-color: #fff; 
-  border: 1px solid #ddd;
+  background-color:var(--lightgreen);
+  border: 4px solid var(--darkgreen);
   border-radius: 8px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); 
   width: 100%;
