--- a/find-your-market/src/styles/App.css
+++ b/find-your-market/src/styles/App.css
@@ -3,6 +3,14 @@
   font-family: "Dongle", sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 1.125rem;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-size: 1.2em; /* Make headings slightly larger */
+}
+
+button {
+  font-size: 1rem; /* Adjust buttons */
 }
 
 .App {
