--- a/find-your-market/src/styles/Header.css
+++ b/find-your-market/src/styles/Header.css
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   right: 0;
-  background-color: var(--darkgreen);
+  background-color: var(--coral);
   color: white;
   display: flex;
   justify-content: flex-start;
@@ -45,7 +45,7 @@
   left: -250px; 
   width: 250px;
   height: 100%;
-  background-color: var(--darkgreen);
+  background-color: var(--coral);
   transition: left 0.3s ease; 
   z-index: 999; 
   padding-top: 60px;
