--- a/find-your-market/src/styles/Markets.css
+++ b/find-your-market/src/styles/Markets.css
@@ -76,7 +76,7 @@
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15); 
 }
 
-.logo-container {
+.logo-container-market {
   width: 50px; 
   height: 50px;
   margin-right: 15px; 
